--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
   input[type="text"],
   input[type="email"],
   input[type="number"],
+  input[type="compañia"],
   select {
     width: 100%;
     padding: 10px;
