--- a/styles.css
+++ b/styles.css
@@ -1,76 +1,22 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  label {
-    display: block;
-    font-weight: bold;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="number"],
-  input[type="compañia"],
-  select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  input[type="submit"] {
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #45a049;
-  }
-  /* Estilos para los íconos de redes sociales */
+  font-family: Arial, sans-serif;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  font-weight: bold;
+}
+
 .social-icons {
+  margin-top: 20px;
   text-align: center;
-  margin-bottom: 20px;
 }
 
 .social-icon {
-  display: inline-block;
-  margin: 0 5px;
-  font-size: 20px;
+  margin: 0 10px;
   color: #333;
   text-decoration: none;
 }
-
-/* Estilos adicionales para los íconos de Font Awesome */
-.fa {
-  display: inline-block;
-  font-size: inherit;
-  cursor: pointer;
-}
-
-.fa-facebook-f:hover {
-  color: #3b5998;
-}
-
-.fa-twitter:hover {
-  color: #1da1f2;
-}
-
-.fa-instagram:hover {
-  color: #c32aa3;
-}
-
-  
